// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Truncate component should render correctly block clicking on expand toggles to collapse 1`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link ins-c-expand-button"
        data-ouia-component-id="OUIA-Generated-Button-link-11"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Custom expand
      </button>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly block clicking on expand toggles to collapse 2`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link ins-c-expand-button"
        data-ouia-component-id="OUIA-Generated-Button-link-14"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Custom expand
      </button>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly block custom button titles 1`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link ins-c-expand-button"
        data-ouia-component-id="OUIA-Generated-Button-link-13"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Custom expand
      </button>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly block custom button titles 2`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link ins-c-expand-button"
        data-ouia-component-id="OUIA-Generated-Button-link-16"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Custom expand
      </button>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly block custom expande button 1`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link ins-c-expand-button"
        data-ouia-component-id="OUIA-Generated-Button-link-12"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Custom expand
      </button>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly block custom expande button 2`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link ins-c-expand-button"
        data-ouia-component-id="OUIA-Generated-Button-link-15"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Custom expand
      </button>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly block when text length is less than user specified length 1`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.
      </span>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly block with short length 1`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lo...
      </span>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link ins-c-expand-button"
        data-ouia-component-id="OUIA-Generated-Button-link-10"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Read more
      </button>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly block without length specified 1`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link ins-c-expand-button"
        data-ouia-component-id="OUIA-Generated-Button-link-9"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Read more
      </button>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly inline clicking on expand toggles to collapse 1`] = `
<div>
  <span
    class="ins-c-truncate is-inline"
    widget-type="InsightsTruncateInline"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
  </span>
  <button
    aria-disabled="false"
    class="pf-v5-c-button pf-m-link ins-c-expand-button"
    data-ouia-component-id="OUIA-Generated-Button-link-3"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    type="button"
  >
    Custom expand
  </button>
</div>
`;

exports[`Truncate component should render correctly inline clicking on expand toggles to collapse 2`] = `
<div>
  <span
    class="ins-c-truncate is-inline"
    widget-type="InsightsTruncateInline"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
  </span>
  <button
    aria-disabled="false"
    class="pf-v5-c-button pf-m-link ins-c-expand-button"
    data-ouia-component-id="OUIA-Generated-Button-link-6"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    type="button"
  >
    Custom expand
  </button>
</div>
`;

exports[`Truncate component should render correctly inline custom button titles 1`] = `
<div>
  <span
    class="ins-c-truncate is-inline"
    widget-type="InsightsTruncateInline"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
  </span>
  <button
    aria-disabled="false"
    class="pf-v5-c-button pf-m-link ins-c-expand-button"
    data-ouia-component-id="OUIA-Generated-Button-link-5"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    type="button"
  >
    Custom expand
  </button>
</div>
`;

exports[`Truncate component should render correctly inline custom button titles 2`] = `
<div>
  <span
    class="ins-c-truncate is-inline"
    widget-type="InsightsTruncateInline"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
  </span>
  <button
    aria-disabled="false"
    class="pf-v5-c-button pf-m-link ins-c-expand-button"
    data-ouia-component-id="OUIA-Generated-Button-link-8"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    type="button"
  >
    Custom expand
  </button>
</div>
`;

exports[`Truncate component should render correctly inline custom expande button 1`] = `
<div>
  <span
    class="ins-c-truncate is-inline"
    widget-type="InsightsTruncateInline"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
  </span>
  <button
    aria-disabled="false"
    class="pf-v5-c-button pf-m-link ins-c-expand-button"
    data-ouia-component-id="OUIA-Generated-Button-link-4"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    type="button"
  >
    Custom expand
  </button>
</div>
`;

exports[`Truncate component should render correctly inline custom expande button 2`] = `
<div>
  <span
    class="ins-c-truncate is-inline"
    widget-type="InsightsTruncateInline"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
  </span>
  <button
    aria-disabled="false"
    class="pf-v5-c-button pf-m-link ins-c-expand-button"
    data-ouia-component-id="OUIA-Generated-Button-link-7"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    type="button"
  >
    Custom expand
  </button>
</div>
`;

exports[`Truncate component should render correctly inline when text length is less than user specified length 1`] = `
<div>
  <span
    class="ins-c-truncate is-inline"
    widget-type="InsightsTruncateInline"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.
  </span>
</div>
`;

exports[`Truncate component should render correctly inline with short length 1`] = `
<div>
  <div
    class="pf-v5-l-stack ins-c-truncate is-block"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <span
        widget-type="InsightsTruncateBlock"
      >
        Lo...
      </span>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link ins-c-expand-button"
        data-ouia-component-id="OUIA-Generated-Button-link-2"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Read more
      </button>
    </div>
  </div>
</div>
`;

exports[`Truncate component should render correctly inline without length specified 1`] = `
<div>
  <span
    class="ins-c-truncate is-inline"
    widget-type="InsightsTruncateInline"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
  </span>
  <button
    aria-disabled="false"
    class="pf-v5-c-button pf-m-link ins-c-expand-button"
    data-ouia-component-id="OUIA-Generated-Button-link-1"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    type="button"
  >
    Read more
  </button>
</div>
`;
